[project]
name = "comfyui_ssstereoscope_bysamseen"
description = "Side by Side 3D Stereoscope generation node for ComfyUI by SamSeen"
version = "1.0.4"
license = "LICENSE"
dependencies = ["numpy", "Pillow", "torch"]

[project.urls]
Repository = "https://github.com/MrSamSeen/ComfyUI_SSStereoscope"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "samseen"
DisplayName = "ComfyUI_SSStereoscope"
Icon = ""
